infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - ticketingtestprodrandom.xyz
        - www.ticketingtestprodrandom.xyz
      secretName: ticketingtestprodrandom-tls
  rules:
    - host: ticketingtestprodrandom.xyz
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port:
                  number: 3000
          - path: /admin/user
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port:
                  number: 3000
          - path: /api/post 
            pathType: Prefix
            backend:
              service: 
                name: post-srv
                port:
                  number: 3000
    - host: www.ticketingtestprodrandom.xyz
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port:
                  number: 3000
          - path: /admin/user
            pathType: Prefix
            backend:
              service: 
                name: auth-srv
                port:
                  number: 3000
          - path: /api/post 
            pathType: Prefix
            backend:
              service: 
                name: post-srv
                port:
                  number: 3000
